<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.InitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="36dp"
            android:gravity="center_horizontal"
            android:textFontWeight="600"
            android:text="@string/app_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginHorizontal="8dp"
            android:textSize="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:justificationMode="inter_word"
            android:text="@string/init_description"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:src="@mipmap/ic_launcher_pv_foreground"
            app:tint="@color/white" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btn_init"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:ems="11"
                android:background="@drawable/button_animated"
                android:text="Comenzar" />
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginHorizontal="8dp"
            android:textSize="16dp"
            android:gravity="center_horizontal"
            android:text="@string/no_account_init"
            />
        <Button
            android:id="@+id/btn_init_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginHorizontal="8dp"
            android:textSize="15dp"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:text="@string/register_init"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>