<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/white"
    android:layout_gravity="center"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="24dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_close_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_36"
            android:layout_marginHorizontal="8dp"
            android:tint="@color/black"
            android:background="@android:color/transparent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="10"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="40"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_signup_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:textColor="@color/gray1"
                    android:gravity="center_vertical"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="40dp">

                <TextView
                    android:id="@+id/tv_signup_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textSize="16sp"
                    android:textColor="@color/gray1"
                    android:gravity="center_vertical"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:ems="11"
                android:background="@drawable/button_animated"
                android:text="@string/signup" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal"
            android:layout_weight="0.1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_account"
                android:textSize="11sp"
                android:textColor="@color/gray1"
                android:gravity="center_horizontal"
                tools:ignore="SmallSp" />
            <Button
                android:id="@+id/btn_go_login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/gray2"
                android:background="@android:color/transparent"
                android:text="@string/signin_signup" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>